--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.1.6",
-    "@astrojs/vercel": "^8.0.4",
+    "@astrojs/react": "^4.2.0",
+    "@astrojs/vercel": "^8.0.7",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "astro": "^5.1.9",
+    "astro": "^5.3.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.5",
+    "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sharp": "^0.33.5",
