--- a/.github/typos.toml
+++ b/.github/typos.toml
@@ -1,7 +1,12 @@
 [default]
 extend-ignore-re = [
-    "\\b[A-Z{2,}\\b",
+    "\\b[A-Z]{2,}\\b",
+    "\\b[a-z]+_[a-z]+\\b"
 ]
+
+[default.extend-words]
+crate = "crate"
+astro = "astro"
 
 [files]
 extend-exclude = [
