--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.5",
     "js-cookie": "^3.0.5",
+    "motion": "^12.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sharp": "^0.33.5",
