excluded Readme file from code quality check

--- a/.github/typos.toml
+++ b/.github/typos.toml
@@ -19,5 +19,6 @@ extend-exclude = [
     "build/**",
     "public/**",
     "package.json",
-    "tsconfig.json"
+    "tsconfig.json",
+    "README.md"
 ]
