--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
+    "@astrojs/sitemap": "^3.3.0",
     "@astrojs/vercel": "^8.0.7",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.0.10",
